--- a/index.html
+++ b/index.html
@@ -2,111 +2,97 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>OuassVTC - Réservation VTC à Perpignan</title>
+  <title>OuassVTC - Réservation VTC moderne</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f0f2f5;
       color: #333;
       margin: 0;
       padding: 0;
     }
     header {
-      background-color: #000;
-      padding: 20px;
+      background-color: #111;
+      padding: 30px;
       text-align: center;
     }
     header img {
-      height: 140px;
-      max-width: 100%;
+      height: 100px;
     }
     .container {
-      padding: 20px;
-      max-width: 900px;
+      max-width: 960px;
       margin: auto;
+      padding: 20px;
     }
-    .car-image {
-      width: 100%;
-      max-width: 450px;
-      display: block;
-      margin: 0 auto 20px auto;
+    .hero-text {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    .hero-text h2 {
+      font-size: 2rem;
     }
     .buttons {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 10px;
-      margin-bottom: 20px;
+      margin: 20px 0;
     }
     .buttons a {
+      background-color: #000;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: 500;
       display: flex;
       align-items: center;
-      gap: 5px;
-      background-color: #000;
-      color: white;
-      padding: 10px 15px;
-      border-radius: 5px;
-      text-decoration: none;
+      gap: 8px;
     }
-    .buttons a img {
-      width: 20px;
-      height: 20px;
+    .form-section {
+      background: #fff;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
-    .info {
-      text-align: center;
-      font-weight: bold;
-      margin-bottom: 20px;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      max-width: 500px;
-      margin: 20px auto;
-    }
-    input, textarea {
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
+    input, textarea, select, button {
       width: 100%;
-    }
-    .localiser-btn {
-      position: absolute;
-      right: 15px;
-      top: 6px;
-      background: none;
-      border: none;
-      cursor: pointer;
-    }
-    .field-container {
-      position: relative;
+      padding: 12px;
+      margin: 10px 0;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 16px;
     }
     button {
-      padding: 10px;
       background-color: #007bff;
       color: white;
-      font-size: 16px;
+      font-weight: bold;
       border: none;
-      border-radius: 5px;
       cursor: pointer;
     }
-    .estimation {
+    button.green {
+      background-color: #28a745;
+    }
+    .confirmation {
       text-align: center;
-      font-weight: bold;
-      margin-top: 10px;
+      margin-top: 20px;
       color: green;
+      font-weight: bold;
+    }
+    #map {
+      height: 300px;
+      margin-top: 20px;
+      border-radius: 10px;
     }
     footer {
-      background-color: #000;
+      background-color: #111;
       color: white;
       text-align: center;
-      padding: 30px 10px;
+      padding: 20px;
       margin-top: 40px;
-    }
-    .hidden-keywords {
-      display: none;
     }
   </style>
 </head>
@@ -115,129 +101,95 @@
     <img src="ouassvtc.png" alt="Logo OuassVTC" />
   </header>
   <div class="container">
-    <img src="voiture.png" alt="Voiture VTC" class="car-image" />
-    <div class="info">
-      <h2>OuassVTC – Votre service de transport privé à Perpignan</h2>
-      <p>OuassVTC vous propose un service de transport privé à Perpignan et ses environs...</p>
-    </div>
-    <div class="buttons">
-      <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
-      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
-      <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
-      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
-    </div>
-    <div class="info">
-      <h2>Formulaire de réservation</h2>
-      <p>Tarif fixe à l'avance – pas de surprise !</p>
-    </div>
-    <form onsubmit="sendEmail(event)">
-      <input type="text" id="nom" name="nom" placeholder="Nom" required />
-      <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
-      <div class="field-container">
-        <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
-        <button type="button" class="localiser-btn" onclick="localiserDepart()">
-          <img src="https://img.icons8.com/ios-filled/24/000000/navigation.png" alt="Me localiser" />
-        </button>
-      </div>
-      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
-      <input type="number" id="passagers" name="passagers" placeholder="Nombre de passagers" min="1" />
-      <input type="datetime-local" id="dateheure" name="dateheure" required />
-      <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
-      <div class="estimation" id="prixEstime"></div>
-      <button type="submit">Envoyer la demande</button>
-    </form>
-    <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
-  </div>
-  <footer>
-    © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.<br><br>
-    Pour toute demande : <a href="mailto:contact@ouassvtc.fr" style="color:#0af;">contact@ouassvtc.fr</a>
-  </footer>
-  <div class="hidden-keywords">Taxi Perpignan, VTC 66, chauffeur privé...</div>
-  <script>
-    emailjs.init("U08QGWWRUenJDOllc");
-    function sendEmail(event) {
-      event.preventDefault();
-      const submitButton = document.querySelector("form button[type='submit']");
-      submitButton.disabled = true;
-      submitButton.innerText = "Envoi en cours...";
-      const nom = document.getElementById("nom").value;
-      const telephone = document.getElementById("telephone").value;
-      const depart = document.getElementById("depart").value;
-      const arrivee = document.getElementById("arrivee").value;
-      const dateheure = document.getElementById("dateheure").value;
-      const passagers = document.getElementById("passagers").value;
-      const message = document.getElementById("message").value;
-      const prixText = document.getElementById("prixEstime").innerText;
-      emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
-        nom, telephone, depart, arrivee, dateheure, passagers, message, prix: prixText
-      }).then(() => {
-        const form = document.querySelector("form");
-        form.style.display = "none";
-        const confirmation = document.createElement("div");
-        confirmation.style.textAlign = "center";
-        confirmation.style.marginTop = "20px";
-        confirmation.style.fontWeight = "bold";
-        confirmation.style.color = "green";
-        confirmation.innerText = "✅ Merci ! Votre demande a bien été envoyée.";
-        document.querySelector(".container").appendChild(confirmation);
-      }).catch(() => {
-        submitButton.disabled = false;
-        submitButton.innerText = "Envoyer la demande";
-        alert("Erreur lors de l'envoi. Veuillez réessayer.");
-      });
-    }
-    function localiserDepart() {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(position => {
-          const lat = position.coords.latitude;
-          const lon = position.coords.longitude;
-          fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`)
-            .then(res => res.json())
-            .then(data => {
-              document.getElementById("depart").value = data.display_name || "";
-              calculerEstimation();
-            });
-        });
-      } else {
-        alert("La géolocalisation n'est pas supportée par votre navigateur.");
-      }
-    }
-    function calculerEstimation() {
-      const depart = document.getElementById("depart").value;
-      const arrivee = document.getElementById("arrivee").value;
-      if (depart && arrivee) {
-        fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(depart)}&format=json&limit=1`)
-          .then(res => res.json())
-          .then(data1 => {
-            if (!data1.length) throw "Adresse de départ non trouvée";
-            const start = `${data1[0].lon},${data1[0].lat}`;
-            return fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(arrivee)}&format=json&limit=1`)
-              .then(res => res.json())
-              .then(data2 => {
-                if (!data2.length) throw "Adresse d'arrivée non trouvée";
-                const end = `${data2[0].lon},${data2[0].lat}`;
-                return fetch(`https://router.project-osrm.org/route/v1/driving/${start};${end}?overview=false`)
-                  .then(res => res.json())
-                  .then(route => {
-                    const distKm = route.routes[0].distance / 1000;
-                    let prix = 20;
-                    if (distKm > 7) prix += (distKm - 7) * 1.6;
-                    document.getElementById("prixEstime").innerText =
-                      `Distance estimée : ${distKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
-                  });
-              });
-          })
-          .catch(() => {
-            document.getElementById("prixEstime").innerText = "Estimation indisponible.";
-          });
-      }
-    }
-    document.getElementById("depart").addEventListener("blur", calculerEstimation);
-    document.getElementById("arrivee").addEventListener("blur", calculerEstimation);
+    <div class="hero-text">
+      <h2>Votre VTC privé à Perpignan</h2>
+      <p>Un service fiable, sécurisé et confortable, accessible en quelques clics. Réservez votre trajet en toute transparence avec estimation instantanée.</p>
+    </div><div class="buttons">
+  <a href="tel:0644120784">📞 Appeler</a>
+  <a href="https://wa.me/33644120784" target="_blank">💬 WhatsApp</a>
+  <a href="sms:+33644120784">✉️ SMS</a>
+</div>
+
+<div class="form-section">
+  <h3>Réserver une course</h3>
+  <form onsubmit="sendEmail(event)">
+    <input type="text" id="nom" placeholder="Nom" required>
+    <input type="tel" id="telephone" placeholder="Téléphone" required>
+    <input type="text" id="depart" placeholder="Adresse de départ" required>
+    <input type="text" id="arrivee" placeholder="Adresse d'arrivée" required>
+    <input type="datetime-local" id="dateheure" required>
+    <select id="passagers">
+      <option value="">Nombre de passagers</option>
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+    </select>
+    <textarea id="message" placeholder="Informations complémentaires..."></textarea>
+    <div id="prixEstime" class="confirmation">Distance : -- km | Estimation : -- €</div>
+    <button type="button" class="green" onclick="calculerEstimation()">Estimer le tarif</button>
+    <button type="submit">Envoyer la demande</button>
+  </form>
+</div>
+
+<div id="map"></div>
+
+<div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
+
+  </div>  <footer>
+    © 2025 OuassVTC - Tous droits réservés. Contact : contact@ouassvtc.fr
+  </footer>  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>  <script>
     function googleTranslateElementInit() {
       new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
     }
-  </script>
-  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-</body>
+  </script>  <script>
+    emailjs.init("U08QGWWRUenJDOllc");
+    function sendEmail(event) {
+      event.preventDefault();
+      const params = {
+        nom: nom.value,
+        telephone: telephone.value,
+        depart: depart.value,
+        arrivee: arrivee.value,
+        dateheure: dateheure.value,
+        passagers: passagers.value,
+        message: message.value,
+        prix: document.getElementById("prixEstime").innerText
+      };
+      emailjs.send("service_kdvgh9f", "template_5xt5vlv", params)
+        .then(() => alert("✅ Votre demande a bien été envoyée."))
+        .catch(() => alert("Erreur d'envoi"));
+    }
+  </script>  <script>
+    let map = L.map('map').setView([42.7, 2.9], 12);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+    navigator.geolocation.getCurrentPosition(pos => {
+      const latlng = [pos.coords.latitude, pos.coords.longitude];
+      L.marker(latlng).addTo(map).bindPopup("Vous êtes ici").openPopup();
+      map.setView(latlng, 13);
+    });
+  </script>  <script>
+    function calculerEstimation() {
+      const d = depart.value, a = arrivee.value;
+      if (!d || !a) return alert("Veuillez entrer les adresses");
+      fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(d)}&format=json&limit=1`)
+        .then(res => res.json()).then(data1 => {
+        if (!data1.length) throw "Erreur départ";
+        const start = `${data1[0].lon},${data1[0].lat}`;
+        fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(a)}&format=json&limit=1`)
+          .then(res => res.json()).then(data2 => {
+          if (!data2.length) throw "Erreur arrivée";
+          const end = `${data2[0].lon},${data2[0].lat}`;
+          fetch(`https://router.project-osrm.org/route/v1/driving/${start};${end}?overview=false`)
+            .then(res => res.json()).then(route => {
+              const dist = route.routes[0].distance / 1000;
+              let prix = 20 + Math.max(0, dist - 7) * 1.6;
+              prixEstime.innerText = `Distance : ${dist.toFixed(1)} km | Estimation : ${prix.toFixed(2)} €`;
+            });
+        });
+      });
+    }
+  </script></body>
 </html>
